Fixed alignment

--- a/src/Components/FavItem/FavItem.css
+++ b/src/Components/FavItem/FavItem.css
@@ -37,7 +37,7 @@
     position: absolute;
     top: 10px;
     right: 10px;
-    background: white;
+    background: none !important;
     padding: 8px;
     border-radius: 50%;
     cursor: pointer;
