--- a/src/Components/Item/Item.css
+++ b/src/Components/Item/Item.css
@@ -33,13 +33,14 @@
 }
 
 .favorite-btn {
-    background: none;
+    background: none !important;
     border: none;
     cursor: pointer;
     position: absolute;
     top: 10px;
     right: 10px;
     z-index: 10;
+    padding: 0;
 }
 
 .favorite-btn img {
